--- a/po/nb.po
+++ b/po/nb.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-09 05:38+0000\n"
+"POT-Creation-Date: 2018-02-10 05:51+0000\n"
 "PO-Revision-Date: 2018-01-18 14:17+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Norwegian Bokmal <nb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-10 05:49+0000\n"
+"X-Launchpad-Export-Date: 2018-02-11 05:48+0000\n"
 "X-Generator: Launchpad (build 18544)\n"
 "Language: nb\n"
 
@@ -728,7 +728,7 @@ msgstr "_Gjør om"
 #. Translators: Revert action label
 #: ../menulibre/MenulibreApplication.py:444
 msgid "_Revert"
-msgstr "_Angre"
+msgstr "_Tilbakestill"
 
 #. Translators: Execute action label
 #: ../menulibre/MenulibreApplication.py:453
