--- a/po/es.po
+++ b/po/es.po
@@ -7,20 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-14 06:02+0000\n"
+"POT-Creation-Date: 2018-02-15 09:18+0000\n"
 "PO-Revision-Date: 2018-02-02 00:45+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-15 05:45+0000\n"
+"X-Launchpad-Export-Date: 2018-02-16 05:30+0000\n"
 "X-Generator: Launchpad (build 18553)\n"
 "Language: es\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Editor del menú"
+msgstr "Editor de menús"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
@@ -556,7 +556,7 @@ msgstr "No se ha podido encontrar «%s» en la ruta de búsqueda."
 #: ../menulibre/Dialogs.py:232
 #, python-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "No se pudo guardar «%s»."
 
 #. Translators: Save Error Dialog, secondary text.
 #: ../menulibre/Dialogs.py:235
