--- a/po/ca.po
+++ b/po/ca.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-23 05:33+0000\n"
+"POT-Creation-Date: 2018-02-24 05:54+0000\n"
 "PO-Revision-Date: 2018-02-10 19:24+0000\n"
 "Last-Translator: Robert Antoni Buj Gelonch <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-24 05:53+0000\n"
+"X-Launchpad-Export-Date: 2018-02-25 05:35+0000\n"
 "X-Generator: Launchpad (build 18561)\n"
 "Language: ca\n"
 
@@ -204,7 +204,7 @@ msgstr ""
 #. Translators: "NoDisplay" on/off switch. When enabled, the application will not be shown in menus, but will be available for MIME type associations etc.
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Hide from menus"
-msgstr "Oculta en el menú"
+msgstr "Ocult al menú"
 
 #. Translators: Header for the less common application and directory fields.
 #: ../data/ui/MenulibreWindow.ui.h:62
