--- a/po/ca.po
+++ b/po/ca.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-05 06:19-0500\n"
-"PO-Revision-Date: 2018-02-24 23:53+0000\n"
+"POT-Creation-Date: 2018-02-25 05:41+0000\n"
+"PO-Revision-Date: 2018-02-10 19:24+0000\n"
 "Last-Translator: Robert Antoni Buj Gelonch <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-02-25 05:41+0000\n"
+"X-Launchpad-Export-Date: 2018-02-26 05:36+0000\n"
 "X-Generator: Launchpad (build 18561)\n"
 "Language: ca\n"
 
@@ -686,7 +686,7 @@ msgstr "Element del menú del l'Xfce"
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:93
 msgid "Xfce toplevel menu item"
-msgstr "Element del menú de nivell superior de l'Xfce"
+msgstr "Element de menú de nivell superior de Xfce"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:95
