--- a/po/hr.po
+++ b/po/hr.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-02 05:44+0000\n"
+"POT-Creation-Date: 2018-03-03 06:09+0000\n"
 "PO-Revision-Date: 2018-02-01 13:24+0000\n"
 "Last-Translator: Sean Davis <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-03-03 06:08+0000\n"
+"X-Launchpad-Export-Date: 2018-03-04 05:33+0000\n"
 "X-Generator: Launchpad (build 18566)\n"
 "Language: hr\n"
 
@@ -616,7 +616,7 @@ msgstr "Konfiguracija radne površine"
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:73
 msgid "User configuration"
-msgstr ""
+msgstr "Konfiguracija korisnika"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:75
