Extend categories with GTK

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ MenuLibre                                                                  NEWS
 - New Stable Release
 - General:
   . Delay menu updates for 1 second to prevent file writing collisions
+  . Added GTK to desktop entry categories
 - Bug Fixes:
   . Fix infinite loop entered when deleting a file in search mode
     (by disabling deletions while in search mode) (LP: #1751616)
