Added OnlyShowIn to desktop entry for known supported desktops

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ MenuLibre                                                                  NEWS
 - General:
   . Delay menu updates for 1 second to prevent file writing collisions
   . Added GTK to desktop entry categories
+  . Added OnlyShowIn to desktop entry for known supported desktops
 - Bug Fixes:
   . Fix infinite loop entered when deleting a file in search mode
     (by disabling deletions while in search mode) (LP: #1751616)
