--- a/menulibre.1
+++ b/menulibre.1
@@ -2,7 +2,7 @@
 \\$2 \(laURL: \\$1 \(ra\\$3
 ..
 .if \n[.g] .mso www.tmac
-.TH MENULIBRE "1" "January 2018" "menulibre 2.1" "User Commands"
+.TH MENULIBRE "1" "March 2018" "menulibre 2.2" "User Commands"
 .SH NAME
 menulibre \- advanced fd.o compliant menu editor
 .SH DESCRIPTION
@@ -30,7 +30,7 @@ Use toolbar layout (server side decorations)
 The full documentation for
 .B menulibre
 is maintained online at
-.URL "http://wiki.bluesabre.org/doku.php?id=menulibre-docs" "the authors documentation portal" "."
+.URL "https://wiki.bluesabre.org/menulibre-docs" "the authors documentation portal" "."
 .SH BUGS
 Please report any bugs found at
 .URL "https://bugs.launchpad.net/menulibre" "launchpad.net" "."
