--- a/po/ca.po
+++ b/po/ca.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-16 20:33-0400\n"
+"POT-Creation-Date: 2018-03-17 05:32+0000\n"
 "PO-Revision-Date: 2018-02-10 19:24+0000\n"
 "Last-Translator: Robert Antoni Buj Gelonch <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-03-17 05:31+0000\n"
+"X-Launchpad-Export-Date: 2018-03-18 05:34+0000\n"
 "X-Generator: Launchpad (build 18571)\n"
 "Language: ca\n"
 
@@ -420,7 +420,7 @@ msgstr "Activable per D-BUS"
 #. Translators: Tooltip for the "Implements" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "A list of interfaces that this application implements."
-msgstr ""
+msgstr "Una llista de les interfícies que implementa aquesta aplicació."
 
 #. Translators: "Implements" text entry. A list of interfaces that this application implements.
 #: ../data/ui/MenulibreWindow.ui.h:127
@@ -959,6 +959,8 @@ msgstr ""
 #, python-format
 msgid "Start group is invalid - currently '%s', should be '%s'"
 msgstr ""
+"El valor del grup d'inici no és vàlid, actualment és «%s» i hauria de ser "
+"«%s»"
 
 #. Translators: This error is displayed when a required key is
 #. missing in a failing desktop file.
@@ -972,7 +974,7 @@ msgstr "No s'ha trobat la clau %s"
 #: ../menulibre/util.py:649
 #, python-format
 msgid "%s value is invalid - currently '%s', should be '%s'"
-msgstr ""
+msgstr "El valor de %s no és vàlid, actualment és «%s» i hauria de ser «%s»"
 
 #: ../menulibre/util.py:678
 #, python-format
