--- a/po/ca.po
+++ b/po/ca.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-01 05:36+0000\n"
+"POT-Creation-Date: 2018-04-02 05:37+0000\n"
 "PO-Revision-Date: 2018-02-10 19:24+0000\n"
 "Last-Translator: Robert Antoni Buj Gelonch <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-02 05:35+0000\n"
+"X-Launchpad-Export-Date: 2018-04-04 05:54+0000\n"
 "X-Generator: Launchpad (build 18599)\n"
 "Language: ca\n"
 
@@ -383,7 +383,7 @@ msgstr "Classe WM d'inici"
 #. Translators: Identify Window Dialog, primary text.
 #: ../data/ui/MenulibreWindow.ui.h:114 ../menulibre/Dialogs.py:251
 msgid "Identify Window"
-msgstr ""
+msgstr "Identifica la finestra"
 
 #. Translators: Tooltip for the "Hidden" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:116
@@ -904,7 +904,7 @@ msgstr "Directori nou"
 #. description.
 #: ../menulibre/MenulibreApplication.py:1692
 msgid "A small descriptive blurb about this directory."
-msgstr ""
+msgstr "Una descripció curta sobre aquest directori."
 
 #. Translators: Confirmation dialog to delete the selected
 #. separator.
@@ -979,7 +979,7 @@ msgstr "El valor de %s no és vàlid, actualment és «%s» i hauria de ser «%s
 #: ../menulibre/util.py:678
 #, python-format
 msgid "%s program '%s' has not been found in the PATH"
-msgstr ""
+msgstr "%s El programa «%s» no s'ha trobat en el CAMÍ"
 
 #: ../menulibre/util.py:681
 #, python-format
@@ -987,6 +987,8 @@ msgid ""
 "%s program '%s' is not a valid shell command according to "
 "GLib.shell_parse_argv, error: %s"
 msgstr ""
+"%s El programa «%s» no és una ordre vàlida per a la línia d'ordres segons "
+"GLib.shell_parse_argv, error: %s"
 
 #. Translators: This error is displayed for a failing desktop file where
 #. errors were detected but the file seems otherwise valid.
