Launchpad automatic translations update.

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-26 05:38+0000\n"
-"PO-Revision-Date: 2018-04-18 17:13+0000\n"
+"PO-Revision-Date: 2018-04-27 13:46+0000\n"
 "Last-Translator: toniem <toni.estevez@gmail.com>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-27 05:41+0000\n"
+"X-Launchpad-Export-Date: 2018-04-28 05:31+0000\n"
 "X-Generator: Launchpad (build 18623)\n"
 "Language: ca\n"
 
@@ -139,8 +139,8 @@ msgid ""
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
 "Programa per executar amb arguments. Aquesta clau és necessària si la clau "
-"«Activable per D-BUS» no està definida com a «True» o cal compatibilitat amb "
-"les implementacions que no entenen l'activació per D-Bus.\n"
+"«Activable per D-BUS» no s'activat o cal compatibilitat amb les "
+"implementacions que no fan servir l'activació per D-Bus.\n"
 "Consulteu http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-"
 "spec-latest.html#exec-variables per obtenir una llista d'arguments "
 "compatibles."
@@ -404,8 +404,8 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
-"Definiu aquesta clau com a «True» si l'activació per D-Bus és compatible amb "
-"aquesta aplicació i voleu utilitzar-la.\n"
+"Activeu aquesta clau si l'activació per D-Bus és compatible amb aquesta "
+"aplicació i voleu utilitzar-la.\n"
 "Vegeu http://standards.freedesktop.org/desktop-entry-"
 "spec/latest/ar01s07.html per a més informació."
 
