--- a/po/es.po
+++ b/po/es.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-26 05:38+0000\n"
-"PO-Revision-Date: 2018-04-18 16:59+0000\n"
+"PO-Revision-Date: 2018-04-27 13:44+0000\n"
 "Last-Translator: toniem <toni.estevez@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-27 05:41+0000\n"
+"X-Launchpad-Export-Date: 2018-04-28 05:31+0000\n"
 "X-Generator: Launchpad (build 18623)\n"
 "Language: es\n"
 
@@ -139,9 +139,8 @@ msgid ""
 "latest.html#exec-variables for a list of supported arguments."
 msgstr ""
 "Programa para ejecutar con argumentos. Esta clave es necesaria si la clave "
-"«Activable por D-BUS» no está definida como «True» o si necesita "
-"compatibilidad con las implementaciones que no entienden la activación por D-"
-"Bus.\n"
+"«Activable por D-BUS» no está activada o si necesita compatibilidad con las "
+"implementaciones que no utilizan la activación por D-Bus.\n"
 "Consulte http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-"
 "spec-latest.html#exec-variables para obtener una lista de los argumentos "
 "compatibles."
@@ -404,8 +403,8 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
-"Defina esta clave como «True»  si la activación por D-Bus es compatible con "
-"esta aplicación y quiere usarla.\n"
+"Active esta clave si la activación por D-Bus es compatible con esta "
+"aplicación y quiere usarla.\n"
 "Consulte http://standards.freedesktop.org/desktop-entry-"
 "spec/latest/ar01s07.html para obtener más información."
 
