--- a/po/pl.po
+++ b/po/pl.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-26 05:38+0000\n"
-"PO-Revision-Date: 2018-02-02 00:45+0000\n"
+"POT-Creation-Date: 2018-03-16 20:33-0400\n"
+"PO-Revision-Date: 2018-05-16 06:33+0000\n"
 "Last-Translator: Piotr Strębski <strebski@gmail.com>\n"
 "Language-Team: polski <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-27 05:41+0000\n"
-"X-Generator: Launchpad (build 18623)\n"
+"X-Launchpad-Export-Date: 2018-05-17 05:52+0000\n"
+"X-Generator: Launchpad (build 18658)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -951,6 +951,7 @@ msgstr "Nie udało się załadować pliku wpisu z powodu następującego błędu
 #, python-format
 msgid "Start group is invalid - currently '%s', should be '%s'"
 msgstr ""
+"Grupa początkowa jest nieprawidłowa - obecnie '%s', a powinna być '%s'"
 
 #. Translators: This error is displayed when a required key is
 #. missing in a failing desktop file.
