--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-26 05:38+0000\n"
-"PO-Revision-Date: 2018-02-01 13:24+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"POT-Creation-Date: 2018-03-16 20:33-0400\n"
+"PO-Revision-Date: 2018-05-24 03:30+0000\n"
+"Last-Translator: 玉堂白鹤 <yjwork@qq.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-27 05:41+0000\n"
-"X-Generator: Launchpad (build 18623)\n"
+"X-Launchpad-Export-Date: 2018-05-24 05:34+0000\n"
+"X-Generator: Launchpad (build 18666)\n"
 "Language: \n"
 
 #: ../menulibre.desktop.in.h:1
@@ -44,7 +44,7 @@ msgstr "添加分隔"
 #. Translators: Icon popup menu item to browse available icons.
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Browse Icons…"
-msgstr ""
+msgstr "浏览图标..."
 
 #. Translators: Icon popup menu item to browse files for an icon file.
 #: ../data/ui/MenulibreWindow.ui.h:10
@@ -96,7 +96,7 @@ msgstr "保存"
 #. Translators: Placeholder text for the search text entry.
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Search"
-msgstr ""
+msgstr "搜索"
 
 #. Translators: This error is displayed in a notice at the top of the application when one or more desktop files fails processing.
 #: ../data/ui/MenulibreWindow.ui.h:27
@@ -116,7 +116,7 @@ msgstr "下移"
 #. Translators: Treeview toolbar button to sort the currently open submenu alphabetically.
 #: ../data/ui/MenulibreWindow.ui.h:33
 msgid "Sort Alphabetically"
-msgstr ""
+msgstr "按字母顺序排序"
 
 #. Translators: Placeholder text/hint for the application name entry.
 #: ../data/ui/MenulibreWindow.ui.h:35
@@ -147,7 +147,7 @@ msgstr "命令"
 #. Translators: Tooltip for the "Path" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "The working directory."
-msgstr ""
+msgstr "工作目录。"
 
 #. Translators: "Path" text entry. The working directory of the application.
 #: ../data/ui/MenulibreWindow.ui.h:46
@@ -157,12 +157,12 @@ msgstr "工作目录"
 #. Translators: Header for the commonly used application fields.
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Application Details"
-msgstr ""
+msgstr "应用程序详细信息"
 
 #. Translators: Tooltip for the "Terminal" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "If set to \"True\", the program will be ran in a terminal window."
-msgstr ""
+msgstr "如果设置为“True”，程序将在终端窗口中运行。"
 
 #. Translators: "Terminal" on/off switch. When enabled, the application is executed in a terminal window.
 #: ../data/ui/MenulibreWindow.ui.h:52
@@ -174,7 +174,7 @@ msgstr "在终端中运行"
 msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
-msgstr ""
+msgstr "如果设置为“True”，则会发送启动通知。 通常意味着应用程序启动时会显示一个忙碌光标。"
 
 #. Translators: "StartupNotify" on/off switch. When enabled, a busy cursor is shown while the application launches.
 #: ../data/ui/MenulibreWindow.ui.h:56
@@ -226,7 +226,7 @@ msgstr "名称"
 #. Translators: Window title for the Select Icon dialog
 #: ../data/ui/MenulibreWindow.ui.h:74
 msgid "Select an icon…"
-msgstr ""
+msgstr "选择一个图标..."
 
 #. Translators: Button to cancel and leave a dialog.
 #. Translators: Help Dialog, cancel button.
@@ -249,7 +249,7 @@ msgstr "应用"
 #. Translators: Window title for the parsing error log dialog.
 #: ../data/ui/MenulibreWindow.ui.h:80
 msgid "Parsing Errors"
-msgstr ""
+msgstr "解析错误"
 
 #. Translators: This text is displayed in the Parsing Errors dialog and provides a basic summary of the errors reported.
 #: ../data/ui/MenulibreWindow.ui.h:82
@@ -318,12 +318,12 @@ msgstr ""
 #. Translators: Tooltip for the "Mimetypes" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:103
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "此应用程序支持的MIME类型。"
 
 #. Translators: "Mimetype" text entry. The MIME type(s) supported by this application.
 #: ../data/ui/MenulibreWindow.ui.h:105
 msgid "Mimetypes"
-msgstr ""
+msgstr "MIME 类型"
 
 #. Translators: Tooltip for the "Keywords" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:107
@@ -353,7 +353,7 @@ msgstr ""
 #. Translators: Identify Window Dialog, primary text.
 #: ../data/ui/MenulibreWindow.ui.h:114 ../menulibre/Dialogs.py:251
 msgid "Identify Window"
-msgstr ""
+msgstr "识别窗口"
 
 #. Translators: Tooltip for the "Hidden" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:116
