--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-16 20:33-0400\n"
-"PO-Revision-Date: 2018-05-24 03:30+0000\n"
+"PO-Revision-Date: 2018-05-25 04:25+0000\n"
 "Last-Translator: 玉堂白鹤 <yjwork@qq.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-05-24 05:34+0000\n"
-"X-Generator: Launchpad (build 18666)\n"
-"Language: \n"
+"X-Launchpad-Export-Date: 2018-05-25 05:33+0000\n"
+"X-Generator: Launchpad (build 18667)\n"
+"Language: zh_CN\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -29,17 +29,17 @@ msgstr "从菜单中添加或移除应用程序"
 #. Translators: This option adds a new application entry to the menu.
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Launcher"
-msgstr "添加启动器"
+msgstr "添加启动器(_L)"
 
 #. Translators: This option adds a new directory entry to the menu.
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Add _Directory"
-msgstr "添加目录"
+msgstr "添加目录(_D)"
 
 #. Translators: This option adds a new separator entry to the menu.
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Add _Separator"
-msgstr "添加分隔"
+msgstr "添加分割符_S)"
 
 #. Translators: Icon popup menu item to browse available icons.
 #: ../data/ui/MenulibreWindow.ui.h:8
@@ -49,35 +49,35 @@ msgstr "浏览图标..."
 #. Translators: Icon popup menu item to browse files for an icon file.
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "Browse Files…"
-msgstr ""
+msgstr "浏览文件…"
 
 #. Translators: Toolbar button to save the currently selected item.
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "Save Launcher"
-msgstr ""
+msgstr "保存启动器"
 
 #. Translators: Toolbar button to undo last change to currently selected item.
 #. Translators: Undo action tooltip
 #: ../data/ui/MenulibreWindow.ui.h:14 ../menulibre/MenulibreApplication.py:428
 msgid "Undo"
-msgstr ""
+msgstr "撤销"
 
 #. Translators: Toolbar button to redo the last undone change to currently selected item.
 #. Translators: Redo action tooltip
 #: ../data/ui/MenulibreWindow.ui.h:16 ../menulibre/MenulibreApplication.py:437
 msgid "Redo"
-msgstr ""
+msgstr "重做"
 
 #. Translators: Toolbar button to revery the currently selected item to it
 #. Translators: Revert action tooltip
 #: ../data/ui/MenulibreWindow.ui.h:18 ../menulibre/MenulibreApplication.py:446
 msgid "Revert"
-msgstr ""
+msgstr "还原"
 
 #. Translators: Toolbar button to test the currently selected item.
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "Test Launcher"
-msgstr ""
+msgstr "测试启动器"
 
 #. Translators: Toolbar button to delete the currently selected item.
 #. Translators: Delete action tooltip
@@ -101,7 +101,7 @@ msgstr "搜索"
 #. Translators: This error is displayed in a notice at the top of the application when one or more desktop files fails processing.
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Invalid desktop files detected! Please see details."
-msgstr ""
+msgstr "侦测到无效的桌面文件！请查看详情。"
 
 #. Translators: Treeview toolbar button to move the currently selected item up.
 #: ../data/ui/MenulibreWindow.ui.h:29
@@ -186,12 +186,12 @@ msgstr "使用启动通知"
 msgid ""
 "If set to \"True\", this entry will not be shown in menus, but will be "
 "available for MIME type associations etc."
-msgstr ""
+msgstr "如果设置为“打开”，则此项不会显示在菜单中，但可用于 MIME 类型关联等。"
 
 #. Translators: "NoDisplay" on/off switch. When enabled, the application will not be shown in menus, but will be available for MIME type associations etc.
 #: ../data/ui/MenulibreWindow.ui.h:60
 msgid "Hide from menus"
-msgstr "从 menus 中隐藏"
+msgstr "从菜单中隐藏"
 
 #. Translators: Header for the less common application and directory fields.
 #: ../data/ui/MenulibreWindow.ui.h:62
@@ -313,7 +313,7 @@ msgstr ""
 #. Translators: "TryExec" text entry. Path to an executable file to determine if the program is installed.
 #: ../data/ui/MenulibreWindow.ui.h:101
 msgid "Try Exec"
-msgstr ""
+msgstr "尝试执行"
 
 #. Translators: Tooltip for the "Mimetypes" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:103
@@ -336,7 +336,7 @@ msgstr ""
 #. Translators: "Keywords" text entry. A list of keywords to describe this entry.
 #: ../data/ui/MenulibreWindow.ui.h:109
 msgid "Keywords"
-msgstr ""
+msgstr "关键词"
 
 #. Translators: Tooltip for the "StartupWMClass" text entry.
 #: ../data/ui/MenulibreWindow.ui.h:111
@@ -409,7 +409,7 @@ msgstr ""
 #. Translators: About Dialog, window title.
 #: ../menulibre/Dialogs.py:38
 msgid "About MenuLibre"
-msgstr ""
+msgstr "关于 MenuLibre"
 
 #. Translators: Help Dialog, window title.
 #: ../menulibre/Dialogs.py:58
@@ -419,14 +419,14 @@ msgstr "在线文档"
 #. Translators: Help Dialog, primary text.
 #: ../menulibre/Dialogs.py:60
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "您想在线阅读 MenuLibre 手册吗？"
 
 #. Translators: Help Dialog, secondary text.
 #: ../menulibre/Dialogs.py:62
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
-msgstr ""
+msgstr "您将被重定向到帮助页面所在的文档网站。"
 
 #. Translators: Help Dialog, confirmation button. Navigates to
 #. online documentation.
@@ -443,13 +443,13 @@ msgstr "保存更改"
 #. Translators: Save On Close Dialog, primary text.
 #: ../menulibre/Dialogs.py:93
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "您想在结束之前保存更改吗？"
 
 #. Translators: Save On Close Dialog, secondary text.
 #. Translators: Save On Leave Dialog, primary text.
 #: ../menulibre/Dialogs.py:95 ../menulibre/Dialogs.py:124
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "如果您不保存启动器，所有更改都将丢失。"
 
 #. Translators: Save On Close Dialog, don't save, then close.
 #. Translators: Save On Leave Dialog, don't save, then leave.
@@ -460,32 +460,32 @@ msgstr "不保存"
 #. Translators: Save On Leave Dialog, primary text.
 #: ../menulibre/Dialogs.py:121
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "在离开这个启动器之前您想保存更改吗？"
 
 #. Translations: Delete Dialog, secondary text. Notifies user that
 #. the file cannot be restored once deleted.
 #: ../menulibre/Dialogs.py:149
 msgid "This cannot be undone."
-msgstr ""
+msgstr "此操作无法撤销。"
 
 #. Translators: Revert Dialog, window title.
 #. Translators: Revert Dialog, confirmation button.
 #: ../menulibre/Dialogs.py:160 ../menulibre/Dialogs.py:171
 msgid "Restore Launcher"
-msgstr ""
+msgstr "还原启动器"
 
 #. Translators: Revert Dialog, primary text. Confirmation to revert
 #. all changes since the last file save.
 #: ../menulibre/Dialogs.py:163
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "你确定要还原这个启动器吗？"
 
 #. Translators: Revert Dialog, secondary text.
 #: ../menulibre/Dialogs.py:165
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
-msgstr ""
+msgstr "自上次保存状态以来的所有更改都将丢失，并且无法自动恢复。"
 
 #. Translators: File Chooser Dialog, confirmation button.
 #: ../menulibre/Dialogs.py:191 ../menulibre/MenulibreIconSelection.py:82
@@ -496,7 +496,7 @@ msgstr "确定"
 #. the selected application is no longer installed.
 #: ../menulibre/Dialogs.py:198
 msgid "No Longer Installed"
-msgstr ""
+msgstr "不再安装"
 
 #. Translators: Launcher Removed Dialog, secondary text.
 #: ../menulibre/Dialogs.py:200
@@ -504,6 +504,10 @@ msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"This launcher has been removed from the system.\n"
+"Selecting the next available item.\n"
+"此启动器已从系统中移除。\n"
+"选择下一个可用项目。"
 
 #. Translators: Not Found In PATH Dialog, primary text. Indicates
 #. that the provided script was not found in any PATH directory.
@@ -516,12 +520,12 @@ msgstr ""
 #: ../menulibre/Dialogs.py:232
 #, python-format
 msgid "Failed to save \"%s\"."
-msgstr ""
+msgstr "无法保存 \"%s\"。"
 
 #. Translators: Save Error Dialog, secondary text.
 #: ../menulibre/Dialogs.py:235
 msgid "Do you have write permission to the file and directory?"
-msgstr ""
+msgstr "您有写入权限的文件和目录吗？"
 
 #. Translators: Identify Window Dialog, secondary text. The selected
 #. application is displayed in the placeholder text.
@@ -534,7 +538,7 @@ msgstr ""
 #: ../menulibre/MenuEditor.py:91 ../menulibre/MenulibreApplication.py:1212
 #: ../menulibre/MenulibreApplication.py:1710
 msgid "Separator"
-msgstr ""
+msgstr "分割符"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:49
@@ -594,70 +598,70 @@ msgstr "WINE"
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:71
 msgid "Desktop configuration"
-msgstr ""
+msgstr "桌面配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:73
 msgid "User configuration"
-msgstr ""
+msgstr "用户配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:75
 msgid "Hardware configuration"
-msgstr ""
+msgstr "硬件配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:77
 msgid "GNOME application"
-msgstr ""
+msgstr "GNOME 应用程序"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:79
 msgid "GTK+ application"
-msgstr ""
+msgstr "GTK+ 应用程序"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:81
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "GNOME 用户配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:83
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "GNOME 硬件配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:85
 #: ../menulibre/MenulibreApplication.py:87
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "GNOME 系统配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:89
 #: ../menulibre/MenulibreApplication.py:91
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Xfce 菜单项"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:93
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Xfce 顶级菜单项"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:95
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Xfce 用户配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:97
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Xfce 硬件配置"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:99
 #: ../menulibre/MenulibreApplication.py:101
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Xfce 系统配置"
 
 #. Translators: "Other" category group. This item is only displayed for
 #. unknown or non-standard categories.
@@ -671,7 +675,7 @@ msgstr "其他"
 #. dismissed.
 #: ../menulibre/MenulibreApplication.py:263
 msgid "MenuLibre cannot be run as root."
-msgstr ""
+msgstr "MenuLibre 不能以root身份运行。"
 
 #. Translators: This link goes to the online documentation with more
 #. information.
@@ -679,37 +683,37 @@ msgstr ""
 #, python-format
 msgid ""
 "Please see the <a href='%s'>online documentation</a> for more information."
-msgstr ""
+msgstr "请参阅  <a href='%s'>在线文档</a> 以获取更多信息。"
 
 #. Translators: Add Launcher action label
 #: ../menulibre/MenulibreApplication.py:390
 msgid "Add _Launcher…"
-msgstr ""
+msgstr "添加启动器(L)…"
 
 #. Translators: Add Launcher action tooltip
 #: ../menulibre/MenulibreApplication.py:392
 msgid "Add Launcher…"
-msgstr "添加启动器..."
+msgstr "添加启动器…"
 
 #. Translators: Add Directory action label
 #: ../menulibre/MenulibreApplication.py:399
 msgid "Add _Directory…"
-msgstr ""
+msgstr "添加目录(_D)…"
 
 #. Translators: Add Directory action tooltip
 #: ../menulibre/MenulibreApplication.py:401
 msgid "Add Directory…"
-msgstr ""
+msgstr "添加目录…"
 
 #. Translators: Add Separator action label
 #: ../menulibre/MenulibreApplication.py:408
 msgid "_Add Separator…"
-msgstr ""
+msgstr "添加分割符(_A)…"
 
 #. Translators: Add Separator action tooltip
 #: ../menulibre/MenulibreApplication.py:410
 msgid "Add Separator…"
-msgstr ""
+msgstr "添加分割符…"
 
 #. Translators: Save Launcher action label
 #: ../menulibre/MenulibreApplication.py:417
@@ -719,27 +723,27 @@ msgstr "保存(_S)"
 #. Translators: Undo action label
 #: ../menulibre/MenulibreApplication.py:426
 msgid "_Undo"
-msgstr ""
+msgstr "撤消(_U)"
 
 #. Translators: Redo action label
 #: ../menulibre/MenulibreApplication.py:435
 msgid "_Redo"
-msgstr ""
+msgstr "重做(_R)"
 
 #. Translators: Revert action label
 #: ../menulibre/MenulibreApplication.py:444
 msgid "_Revert"
-msgstr ""
+msgstr "还原(_R)"
 
 #. Translators: Execute action label
 #: ../menulibre/MenulibreApplication.py:453
 msgid "_Execute"
-msgstr ""
+msgstr "执行(_E)"
 
 #. Translators: Execute action tooltip
 #: ../menulibre/MenulibreApplication.py:455
 msgid "Execute Launcher"
-msgstr ""
+msgstr "执行启动器"
 
 #. Translators: Delete action label
 #: ../menulibre/MenulibreApplication.py:462
@@ -782,12 +786,12 @@ msgstr "关于"
 #. Translators: "Categories" launcher section
 #: ../menulibre/MenulibreApplication.py:634
 msgid "Categories"
-msgstr ""
+msgstr "类别"
 
 #. Translators: "Actions" launcher section
 #: ../menulibre/MenulibreApplication.py:637
 msgid "Actions"
-msgstr ""
+msgstr "动作"
 
 #. Translators: "Advanced" launcher section
 #: ../menulibre/MenulibreApplication.py:640
@@ -803,12 +807,12 @@ msgstr ""
 #. selection.
 #: ../menulibre/MenulibreApplication.py:820
 msgid "Select a category"
-msgstr ""
+msgstr "选择一个类别"
 
 #. Translators: "Category Name" tree column header
 #: ../menulibre/MenulibreApplication.py:824
 msgid "Category Name"
-msgstr ""
+msgstr "类别名称"
 
 #. Translators: "This Entry" launcher-specific category group
 #: ../menulibre/MenulibreApplication.py:927
@@ -818,35 +822,35 @@ msgstr ""
 #. Translators: Placeholder text for a newly created action
 #: ../menulibre/MenulibreApplication.py:988
 msgid "New Shortcut"
-msgstr ""
+msgstr "新快捷键"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1138
 msgid "Select a working directory…"
-msgstr ""
+msgstr "选择一个工作目录…"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1142
 msgid "Select an executable…"
-msgstr ""
+msgstr "选择可执行文件…"
 
 #. Translators: This error is displayed when the user does not
 #. have sufficient file system permissions to delete the
 #. selected file.
 #: ../menulibre/MenulibreApplication.py:1388
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "您没有权限删除此文件。"
 
 #. Translators: Placeholder text for a newly created launcher.
 #: ../menulibre/MenulibreApplication.py:1636
 msgid "New Launcher"
-msgstr ""
+msgstr "新启动器"
 
 #. Translators: Placeholder text for a newly created launcher's
 #. description.
 #: ../menulibre/MenulibreApplication.py:1639 ../menulibre/MenulibreXdg.py:49
 msgid "A small descriptive blurb about this application."
-msgstr ""
+msgstr "关于这个应用程序的一个描述性的简介。"
 
 #. Translators: Placeholder text for a newly created directory.
 #: ../menulibre/MenulibreApplication.py:1689
@@ -857,44 +861,44 @@ msgstr "新建目录"
 #. description.
 #: ../menulibre/MenulibreApplication.py:1692
 msgid "A small descriptive blurb about this directory."
-msgstr ""
+msgstr "关于这个目录的一个描述性的简介。"
 
 #. Translators: Confirmation dialog to delete the selected
 #. separator.
 #: ../menulibre/MenulibreApplication.py:2117
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "您确定要删除此分隔符吗？"
 
 #. Translators: Confirmation dialog to delete the selected launcher.
 #: ../menulibre/MenulibreApplication.py:2121
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr ""
+msgstr "您确定要删除  \"%s\" ?"
 
 #. Translators: Menu item to open the Parsing Errors dialog.
 #: ../menulibre/MenulibreApplication.py:2233
 msgid "Parsing Error Log"
-msgstr ""
+msgstr "解析错误日志"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreIconSelection.py:78
 msgid "Select an image…"
-msgstr ""
+msgstr "选择图片…"
 
 #. Translators: "Images" file chooser dialog filter
 #: ../menulibre/MenulibreIconSelection.py:87
 msgid "Images"
-msgstr ""
+msgstr "图片"
 
 #. Translators: "Search Results" treeview column header
 #: ../menulibre/MenulibreTreeview.py:64
 msgid "Search Results"
-msgstr ""
+msgstr "搜索结果"
 
 #. Translators: Placeholder text for a new menu item name.
 #: ../menulibre/MenulibreXdg.py:46
 msgid "New Menu Item"
-msgstr ""
+msgstr "新菜单项"
 
 #. Translators: This error is displayed when a desktop file cannot
 #. be correctly read by MenuLibre. A (possibly untranslated) error
@@ -942,7 +946,7 @@ msgstr ""
 #. errors were detected but the file seems otherwise valid.
 #: ../menulibre/util.py:687
 msgid "Unknown error. Desktop file appears to be are valid."
-msgstr ""
+msgstr "未知错误。 桌面文件似乎是有效的。"
 
 #~ msgid "Image File"
 #~ msgstr "图像文件"
